CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

OPTION(BUILD_EXAMPLES_CPP "Build the C++ bindings examples" OFF)

IF(BUILD_EXAMPLES_CPP)
    INCLUDE_DIRECTORIES("include")

    PROJECT(Example-Bindings-CPP)

    ADD_EXECUTABLE(${PROJECT_NAME} main.cpp)

    TARGET_LINK_LIBRARIES(${PROJECT_NAME} SIEGE ${AUX_LIBRARIES})

    IF(INSTALL_EXAMPLES)
        INSTALL(TARGETS ${PROJECT_NAME} DESTINATION bin)
    ENDIF(INSTALL_EXAMPLES)
ENDIF(BUILD_EXAMPLES_CPP)
