CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(Example)

INCLUDE_DIRECTORIES("include")

ADD_EXECUTABLE(${PROJECT_NAME} main.cpp)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} SIEGE ${AUX_LIBRARIES})

INSTALL(DIRECTORY "include/siege" DESTINATION "include")
INSTALL(FILES "include/siege-cpp" DESTINATION "include")

IF(INSTALL_EXAMPLES)
    INSTALL(TARGETS ${PROJECT_NAME} DESTINATION bin)
ENDIF(INSTALL_EXAMPLES)
