CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/CMakeModules/")

PROJECT(Example)

find_package(SIEGE REQUIRED)

INCLUDE_DIRECTORIES("include" ${SIEGE_INCLUDE_DIR})

ADD_EXECUTABLE(${PROJECT_NAME} main.cpp)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${SIEGE_LIBRARY} ${AUX_LIBRARIES})

INSTALL(DIRECTORY "include/siege" DESTINATION "include")
INSTALL(FILES "include/siege-cpp" DESTINATION "include")

IF(INSTALL_EXAMPLES)
    INSTALL(TARGETS ${PROJECT_NAME} DESTINATION bin)
ENDIF(INSTALL_EXAMPLES)
